# TP-Cripto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TP_Cripto  TP_Cripto.cbp  cmake_install.cmake
src/: args_parser.c  args_parser.h  binary.txt  config.c  config.h  custom_print.h  distribution.c  distribution.h  finding.c  finding.h  header_parser.c  header_parser.h  header_struct.h  main.c  text.txt
src/common/: constants.h  galios.h  galois.c  helper.c  helper.h
